--- a/extends-2.yml
+++ b/extends-2.yml
@@ -15,4 +15,10 @@
     - name: print-msg
       debug:
         var: returnmsgtumx
+    - name: install-ngxtop
+      shell: pip3 install ngxtop
+      register: returnmsg
+    - name: print-msg
+      debug:
+        var: returnmsg
 
